[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenvy = "0.15.6"
http = "0.2.9"
oauth2 = "4.3.0"
oauth2-client = "0.2.0"
oauth2-core = "0.2.0"
oauth2-facebook = "0.2.0"
reqwest = { version = "0.11.5", features = ["json"] }
serde = "1.0.156"
tokio = { version = "1.26.0" , features = ["full" ] }
url = "2.3.1"
